--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
 </dependency>
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
 
 	</dependencies>
 
@@ -66,5 +72,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
