new endpoint to fetch customer info and rewards

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 spring.application.name=Rewards
+
+# H2 database configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:h2:file:C:/Users/Pujitha/test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+
+
+# Enable H2 console
+#spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Automatically run schema.sql and data.sql at startup
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:data.sql
+
+spring.datasource.initialization-mode=always
+
+
+# Optional: If you want the SQL scripts to be executed only on a specific profile (e.g., "dev" profile)
+# spring.profiles.active=dev
+
+
