--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,21 @@
     <version>1.18.30</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.1.0</version> <!-- Replace with the latest version -->
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>3.1.0</version> <!-- Replace with the latest version -->
+</dependency>
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
 
 	</dependencies>
 
